--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.thymeleaf.cache=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/pma-spring
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-# use this for schema.sql file only
-#spring.jpa.hibernate.ddl-auto=none
+# don't use data.sql or schema.sql
+spring.datasource.initialization-mode=never
+
+# don't create tables using the Java code (Entities)
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.show-sql=true
+spring.thymeleaf.cache=false
+version=3.0.0
