--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pma-spring
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-# don't use data.sql or schema.sql
-spring.datasource.initialization-mode=never
-
-# don't create tables using the Java code (Entities)
-spring.jpa.hibernate.ddl-auto=none
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.jpa.show-sql=true
-spring.thymeleaf.cache=false
-version=3.0.0
+spring.profiles.active=dev
