--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,3 +19,5 @@ version=dev
 logging.level.root=WARN
 logging.level.com.u4.projectmanagement=DEBUG
 logging.level.org.springframework=INFO
+
+server.error.whitelabel.enabled=false
