--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/pma-spring
-
 spring.datasource.username=postgres
-
 spring.datasource.password=postgres
 
 # don't use data.sql or schema.sql
@@ -21,3 +19,8 @@ logging.level.com.u4.projectmanagement=DEBUG
 logging.level.org.springframework=INFO
 
 server.error.whitelabel.enabled=false
+
+# we need the below property to turn off hibernate auto validation
+# we are using constraints validation and customizing our data validation
+# rules
+spring.jpa.properties.javax.persistence.validation.mode=none
